alignment issues fixed

--- a/components/Gathering/GatheringCreate/GatheringCreate.module.scss
+++ b/components/Gathering/GatheringCreate/GatheringCreate.module.scss
@@ -78,8 +78,8 @@
 
   .Entry {
     position: relative;
-    width: 220px;
-    min-width: 220px;
+    width: 230px;
+    min-width: 230px;
     height: fit-content;
     background-color: transparent;
     input {
@@ -202,9 +202,9 @@
   gap: 6px;
   margin: 0;
   border: 0;
-  width: 220px;
+  width: 230px;
   height: 48px;
-  min-width: 220px;
+  min-width: 230px;
   border-radius: 999px;
   padding: 8px;
   //background-color: var(--theme-offset-1);
