--- a/components/MainNav/mainNav.module.scss
+++ b/components/MainNav/mainNav.module.scss
@@ -90,6 +90,7 @@
       border: 0;
       margin: 0;
       background: transparent;
+      margin-left: -16px;
     }
     &Mobile {
       position: relative;
